--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,9 +3,11 @@
 
 //webokcss
 @import "global";
+@import "comps/button";
 
 //comps
 @import "comps/header";
+@import "comps/faq";
 
 //fonts
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&family=Nunito:wght@700&display=swap');
