--- a/src/scss/comps/header.scss
+++ b/src/scss/comps/header.scss
@@ -93,7 +93,7 @@ header {
     @apply h-auto z-10 translate-x-0 opacity-100 transition-transform duration-300 lg:duration-0;
   }
   li {
-    @apply mb-2 lg:mb-0 lg:ml-5;
+    @apply mb-2 lg:mb-0 lg:ml-3 xl:ml-5;
   }
 }
 
