--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "comps/header";
 @import "comps/footer";
 @import "comps/faq";
+@import "comps/video_embed";
 
 //fonts
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&family=Nunito:wght@700&display=swap');
