massive commit with services and events

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,8 @@
 @import "comps/footer";
 @import "comps/faq";
 @import "comps/video_embed";
+@import "comps/services";
+@import "comps/events";
 
 //plugins
 @import "plugins/wpcf7";
