--- a/src/scss/comps/header.scss
+++ b/src/scss/comps/header.scss
@@ -81,7 +81,34 @@ header {
     li {
       @apply relative flex items-center justify-center;
       &.submenu-parent {
-        @apply mr-6;
+        @apply flex flex-col lg:flex-row lg:mr-6;
+        &:hover {
+          @media (min-width: 1024px) {          
+            .sub-menu {
+              @apply bg-brand-neutral p-4 rounded w-auto transition-all duration-300 delay-150;
+              li {
+                @apply h-7 visible transition-all duration-300 delay-150;
+                @media (min-width: 1024px) {
+                  height: 32px;
+                }
+              }
+            }
+          }
+        }
+        @media (max-width: 1023px) {  
+          .sub-menu {  
+            @apply h-auto bg-transparent p-0 rounded w-auto transition-all duration-300 delay-150;
+            li {
+              @apply h-0 invisible transition-all duration-150 delay-100 mb-0;
+            }
+            &.open {
+              @apply bg-brand-neutral h-auto p-4 transition-all duration-300 delay-100;
+              li {
+                @apply h-7 visible transition-all duration-300 delay-150 mb-2;
+              }
+            }
+          }
+        }
       }
       .submenu-arrow {
         @apply cursor-pointer transform scale-100 transition-transform duration-300 absolute top-1.5 -right-7 w-5 h-5 bg-contain bg-no-repeat bg-center;
@@ -89,8 +116,11 @@ header {
         &:hover {
           @apply transform scale-105;
         }
-        &.open {
-          background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 26.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 48 48' style='enable-background:new 0 0 48 48;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:none;stroke:%232EB8C1;stroke-width:6.8674;stroke-miterlimit:10;%7D .st1%7Bdisplay:none;%7D .st2%7Bdisplay:inline;%7D%0A%3C/style%3E%3Cg id='x'%3E%3Cg%3E%3Cg%3E%3Cline class='st0' x1='3.4' y1='3.4' x2='44.6' y2='44.6'/%3E%3C/g%3E%3Cg%3E%3Cline class='st0' x1='44.6' y1='3.4' x2='3.4' y2='44.6'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3Cg id='arrow' class='st1'%3E%3Cg class='st2'%3E%3Cpolyline class='st0' points='44.6,3.4 24,24 3.4,3.4 '/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+        @media (max-width: 1023px) {
+          @apply right-8;
+          &.open {
+              background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 26.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 48 48' style='enable-background:new 0 0 48 48;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:none;stroke:%232EB8C1;stroke-width:6.8674;stroke-miterlimit:10;%7D .st1%7Bdisplay:none;%7D .st2%7Bdisplay:inline;%7D%0A%3C/style%3E%3Cg id='x'%3E%3Cg%3E%3Cg%3E%3Cline class='st0' x1='3.4' y1='3.4' x2='44.6' y2='44.6'/%3E%3C/g%3E%3Cg%3E%3Cline class='st0' x1='44.6' y1='3.4' x2='3.4' y2='44.6'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3Cg id='arrow' class='st1'%3E%3Cg class='st2'%3E%3Cpolyline class='st0' points='44.6,3.4 24,24 3.4,3.4 '/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+            }
         }
       }
     }
@@ -111,7 +141,7 @@ header {
     @apply mb-2 lg:mb-0 lg:ml-3 xl:ml-5;
     ul.sub-menu {
       li {
-        @apply ml-0;
+        @apply ml-0 mb-0;
         a {
           @apply text-white transition-colors duration-300;
           &:hover {
@@ -128,26 +158,12 @@ header {
 
 // sub-menu styles
 ul.sub-menu {
-  @apply bg-transparent flex flex-col absolute top-10 w-auto h-auto;
-  transition: height 125ms ease-in 0ms, background-color 250ms ease-out 250ms, padding 250ms ease-out 125ms;
+  @apply bg-transparent flex flex-col lg:absolute top-10 w-auto h-auto transition-all duration-300 delay-150;
   li {
-    height: 0;
-    visibility: hidden;
-    transition: height 125ms ease-in 0ms, visibility 125ms ease-out 0ms;
+    @apply h-0 invisible duration-150 delay-100;
   }
   a {
     @apply whitespace-nowrap;
-  }
-  &.open {
-    @apply bg-brand-neutral p-4 rounded w-auto;
-    transition: height 250ms ease-out 125ms;
-    li {
-      @apply h-7 visible;
-      transition: height 125ms ease-out 125ms, visibility 125ms ease-out 125ms;
-      @media (min-width: 1024px) {
-        height: 32px;
-      }
-    }
   }
 }
 
